[gd_scene load_steps=7 format=3 uid="uid://qx5og3nyik2q"]

[ext_resource type="Script" path="res://pottit/scripts/player_gui.gd" id="1_nxgnq"]
[ext_resource type="Texture2D" uid="uid://2skdnddi7cgv" path="res://textures/xelu_free_controller_and_key_prompts/Keyboard & Mouse/Dark/1_Key_Dark.png" id="1_vvbc5"]
[ext_resource type="Texture2D" uid="uid://dayh1y211ccol" path="res://textures/xelu_free_controller_and_key_prompts/Keyboard & Mouse/Dark/2_Key_Dark.png" id="2_n1vyt"]
[ext_resource type="Texture2D" uid="uid://c6tsqgnb725ih" path="res://textures/xelu_free_controller_and_key_prompts/Keyboard & Mouse/Dark/4_Key_Dark.png" id="3_etgyo"]
[ext_resource type="Texture2D" uid="uid://b4hdhhyhwft26" path="res://textures/xelu_free_controller_and_key_prompts/Keyboard & Mouse/Dark/3_Key_Dark.png" id="4_krkl0"]
[ext_resource type="Texture2D" uid="uid://bgys4e6vgo08q" path="res://textures/white.png" id="6_jp8es"]

[node name="PlayerGui" type="Control"]
z_index = -1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_nxgnq")

[node name="BlomkaolPowers" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 221.0
offset_top = 458.0
offset_right = -892.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
columns = 2

[node name="1" type="Control" parent="BlomkaolPowers"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="BlomkaolPowers/1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
scale = Vector2(0.66, 0.66)
pivot_offset = Vector2(50, 50)
texture = ExtResource("1_vvbc5")
stretch_mode = 2

[node name="Text" type="RichTextLabel" parent="BlomkaolPowers/1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.6066
offset_top = -37.565
offset_right = 17.3934
offset_bottom = -7.56498
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
pivot_offset = Vector2(40, 15)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 8
bbcode_enabled = true
text = "[center] sticky [/center]"

[node name="2" type="Control" parent="BlomkaolPowers"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="BlomkaolPowers/2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
scale = Vector2(0.66, 0.66)
pivot_offset = Vector2(50, 50)
texture = ExtResource("2_n1vyt")
stretch_mode = 2

[node name="Text2" type="RichTextLabel" parent="BlomkaolPowers/2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0051
offset_top = -35.4436
offset_right = 19.9949
offset_bottom = -5.44363
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
pivot_offset = Vector2(40, 15)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 8
bbcode_enabled = true
text = "[center] bouncy [/center]"

[node name="4" type="Control" parent="BlomkaolPowers"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="BlomkaolPowers/4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
scale = Vector2(0.66, 0.66)
pivot_offset = Vector2(50, 50)
texture = ExtResource("3_etgyo")
stretch_mode = 2

[node name="Text3" type="RichTextLabel" parent="BlomkaolPowers/4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.3137
offset_top = -36.7918
offset_right = 16.6863
offset_bottom = -6.79185
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
pivot_offset = Vector2(40, 15)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 8
bbcode_enabled = true
text = "[center] floaty [/center]"

[node name="3" type="Control" parent="BlomkaolPowers"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="BlomkaolPowers/3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
scale = Vector2(0.66, 0.66)
pivot_offset = Vector2(50, 50)
texture = ExtResource("4_krkl0")
stretch_mode = 2

[node name="Text4" type="RichTextLabel" parent="BlomkaolPowers/3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0051
offset_top = -32.5492
offset_right = 19.9949
offset_bottom = -2.54922
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398
pivot_offset = Vector2(40, 15)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 8
bbcode_enabled = true
text = "[center] rocky [/center]"

[node name="BlomkaolSelection" type="Control" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1214.0
offset_bottom = -654.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="BlomkaolSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -33.0
offset_right = -33.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(33, 33)
texture = ExtResource("6_jp8es")
